Add header and styles for all pages

--- a/src/index.css
+++ b/src/index.css
@@ -2,11 +2,13 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  /* color: #615a74; */
+  /* font-family: "Inter", sans-serif; */
 }
 
-/* body {
-  overflow-x: hidden;
-} */
+a {
+  text-decoration: none;
+}
 
 li {
   list-style: none;
