--- a/src/components/Feedback/Feedback.module.css
+++ b/src/components/Feedback/Feedback.module.css
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column;
   width: calc(100% / 3 - 20px);
-  background-color: #f6f6fa;
+  background-color: #f8f8f8;
   padding: 20px;
   border-radius: 20px;
   font-family: "Inter", sans-serif;
