--- a/src/components/ui/ButtonElement/ButtonElement.module.css
+++ b/src/components/ui/ButtonElement/ButtonElement.module.css
@@ -67,3 +67,9 @@
     border-radius: 4px;
     font-size: 0.7rem;
 }
+
+
+/*Не активная кнопка - цвет:
+Цвет фона: #e0e0e0 (светлый серый).
+Цвет текста: #a0a0a0 (темно-серый).
+*/
