--- a/src/pages/Dashboard/Dashboard.module.css
+++ b/src/pages/Dashboard/Dashboard.module.css
@@ -65,3 +65,45 @@
     flex-direction: column;
     gap: 20px;
 }
+
+.diagrammBlock {
+    display: flex;
+    flex-direction: column;
+    justify-content: end;
+    gap: 20px;
+}
+
+.diagramm {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-color: #f8f8f8;
+    border-radius: 20px;
+    box-shadow:  0 4px 6px rgba(0, 0, 0, 0.05), 0 8px 24px rgba(0, 0, 0, 0.08);
+}
+
+.sortBy {
+    display: grid;
+    width: 100%;
+    grid-template-columns: repeat(2, 1fr);
+}
+
+.tabs {
+    text-align: center;
+    padding: 10px;
+    cursor: pointer;
+    transition: all 0.3s ease;
+}
+.tabs:first-child {
+    border-top-left-radius: 20px;
+    border-bottom-right-radius: 20px;
+}
+.tabs:last-child {
+    border-top-right-radius: 20px;
+    border-bottom-left-radius: 20px;
+}
+
+.tabs.active {
+    background: #fcfbfb;
+    box-shadow: 0 2px 6px rgba(0, 0, 0, 0.08);
+}
