Finished diagram and completed header and began footer

--- a/src/index.css
+++ b/src/index.css
@@ -2,7 +2,7 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  /* color: #615a74; */
+  /* color: rgb(97, 90, 116); */
   /* font-family: "Inter", sans-serif; */
 }
 
