--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -11,7 +11,7 @@
 
 .nav {
     display: flex;
-    gap: 50px;
+    gap: 10px;
     font-size: 1.3rem;
     font-optical-sizing: auto;
     font-weight: 500;
@@ -23,33 +23,85 @@
     text-transform: uppercase;
 }
 
-.settings {
+.icon {
     display: flex;
-    gap: 10px;
+    flex-direction: column;
+    align-items: center;
+    gap: 5px;
     padding: 10px;
     color: #615a74;
     border-radius: 8px;
     transition: all 0.2s ease;
     overflow: hidden;
 }
-.settings:hover {
+.icon p {
+    font-size: 0.7rem;
+}
+.icon:hover {
     color: #5552e8;
     transform: translateY(-1px);
 }
-.settings:active {
+.icon:active {
     outline: 2px #ff3d85 solid;
     outline-offset: 2px;
 }
 
-.icon {
+.icon .settings {
     width: 25px;
     height: 25px;
-    background-image: url('@/assets/icons/settings.svg');
-    background-size: 25px 25px;
+    background-image: url('@/assets/icons/menu/settings.svg');
+    background-size: auto 25px;
+    background-repeat: no-repeat;
     transition: all 0.2s ease;
 }
+.icon:hover .settings {
+    background-image: url('@/assets/icons/menu/settings_1.svg');
+}
 
-.settings:hover .icon {
-    background-image: url('@/assets/icons/settings_1.svg');
-    background-size: 25px 25px;
+.icon .login {
+    width: 29px;
+    height: 25px;
+    background-image: url('@/assets/icons/menu/login.svg');
+    background-size: auto 25px;
+    background-repeat: no-repeat;
+    transition: all 0.2s ease;
+}
+.icon:hover .login {
+    background-image: url('@/assets/icons/menu/login_1.svg');
+}
+
+.icon .analitics {
+    width: 30px;
+    height: 25px;
+    background-image: url('@/assets/icons/menu/analitics.svg');
+    background-size: auto 25px;
+    background-repeat: no-repeat;
+    transition: all 0.2s ease;
+}
+.icon:hover .analitics {
+    background-image: url('@/assets/icons/menu/analitics_1.svg');
+}
+
+.icon .subscriptions {
+    width: 20px;
+    height: 25px;
+    background-image: url('@/assets/icons/menu/subscription.svg');
+    background-size: auto 25px;
+    background-repeat: no-repeat;
+    transition: all 0.2s ease;
+}
+.icon:hover .subscriptions {
+    background-image: url('@/assets/icons/menu/subscription_1.svg');
+}
+
+.icon .dashboard {
+    width: 33px;
+    height: 25px;
+    background-image: url('@/assets/icons/menu/dashboard.svg');
+    background-size: auto 25px;
+    background-repeat: no-repeat;
+    transition: all 0.2s ease;
+}
+.icon:hover .dashboard {
+    background-image: url('@/assets/icons/menu/dashboard_1.svg');
 }
