--- a/src/pages/Dashboard/Dashboard.module.css
+++ b/src/pages/Dashboard/Dashboard.module.css
@@ -69,7 +69,7 @@
 .diagrammBlock {
     display: flex;
     flex-direction: column;
-    justify-content: end;
+    justify-content: space-between;
     gap: 20px;
 }
 
@@ -77,9 +77,10 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    background-color: #f8f8f8;
-    border-radius: 20px;
+    background-color: #f3f3f8;
+    border-radius: 12px;
     box-shadow:  0 4px 6px rgba(0, 0, 0, 0.05), 0 8px 24px rgba(0, 0, 0, 0.08);
+    height: 100%;
 }
 
 .sortBy {
@@ -91,7 +92,6 @@
 .tabs {
     text-align: center;
     padding: 10px;
-    cursor: pointer;
     transition: all 0.3s ease;
 }
 .tabs:first-child {
@@ -103,7 +103,16 @@
     border-bottom-left-radius: 20px;
 }
 
-.tabs.active {
-    background: #fcfbfb;
-    box-shadow: 0 2px 6px rgba(0, 0, 0, 0.08);
+.tab {
+    cursor: pointer;
+    background: #e0e0e0;
+    box-shadow: inset 2px -2px 6px rgba(0, 0, 0, 0.04);
+}
+
+.tab.active {
+    cursor: auto;
+    background: transparent;
+    box-shadow: none;
+    z-index: 1;
+    position: relative;
 }
