--- a/src/pages/Dashboard/Dashboard.module.css
+++ b/src/pages/Dashboard/Dashboard.module.css
@@ -5,10 +5,16 @@
     color: #615a74;
 }
 
+.dashboardPage h1 {
+    margin: 50px 0;
+    font-size: 2.7rem;
+    font-family: "Montserrat", sans-serif;
+}
+
 .mainStatistics {
     display: flex;
     justify-content: space-between;
-    margin: 70px 0;
+    margin: 20px 0 70px 0;
 }
 
 .statistic {
