--- a/src/pages/Subscriptions/Subscriptions.module.css
+++ b/src/pages/Subscriptions/Subscriptions.module.css
@@ -5,3 +5,15 @@
     color: #615a74;
     width: 1200px;
 }
+
+.headerBlock {
+    display: flex;
+    justify-content: space-between;
+    margin: 50px 0;
+}
+
+.headerBlock h1 {
+    margin: 0;
+    font-size: 2.7rem;
+    font-family: "Montserrat", sans-serif;
+}
