--- a/src/pages/Subscriptions/Subscriptions.module.css
+++ b/src/pages/Subscriptions/Subscriptions.module.css
@@ -17,3 +17,42 @@
     font-size: 2.7rem;
     font-family: "Montserrat", sans-serif;
 }
+
+.filtersBlock {
+    display: flex;
+    gap: 50px;
+}
+
+.searchFilter {
+    display: flex;
+    align-items: center;
+    width: 250px;
+    border: #5552e8 solid 2px;
+    border-radius: 8px;
+    padding: 3px 10px;
+    gap: 10px;
+    font-size: 1.3rem;
+    transition: border 0.2s ease;
+    margin-bottom: 50px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+}
+
+.searchFilter input {
+    border: none;
+    background-color: transparent;
+    height: 100%;
+    width: 100%;
+    outline: none;
+    font-size: 1.3rem;
+    font-family: "Jura", sans-serif;
+    font-weight: 600;
+    color: #615a74;
+}
+.searchFilter input::placeholder {
+    color: #b1aac5;
+}
+
+.searchFilter:focus-within {
+    border: #ff3d85 solid 2px;
+    box-shadow: 0 4px 8px #ff3d854d;
+}
