--- a/src/components/CardSubscription/CardSubscription.module.css
+++ b/src/components/CardSubscription/CardSubscription.module.css
@@ -1,45 +1,20 @@
+/* Общие стили */
+
 .card {
     display: grid;
-    grid-template-columns: 1fr 5fr 3fr;
-    row-gap: 10px;
     background-color: #e5e5f1;
-    padding: 20px 30px 10px 30px;
     border-radius: 12px;
     align-items: center;
     box-shadow:  0 4px 6px rgba(0, 0, 0, 0.05), 0 8px 24px rgba(0, 0, 0, 0.08);
 }
 
-.icon {
-    padding-right: 40px;
-    grid-column: 1;
-    grid-row: 1;
-}
-
-.titleBlock {
-    grid-column: 2;
-    grid-row: 1;
-    display: flex;
-    flex-direction: column;
-    gap: 8px;
-}
-
-.title {
-    font-size: 2rem;
+.titleSub {
     font-family: "Montserrat", sans-serif;
     font-weight: 600;
 }
 
 .category {
     text-transform: uppercase;
-}
-
-.pay {
-    grid-column: 3;
-    grid-row: 1;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap: 8px;
 }
 
 .amount {
@@ -54,13 +29,6 @@
     font-weight: 500;
 }
 
-.buttonsBlock {
-    grid-column: 3;
-    grid-row: 2;
-    display: flex;
-    gap: 20px;
-}
-
 .statusSubscription {
     display: inline-block;
     padding: 2px 8px;
@@ -73,13 +41,107 @@
 }
 
 .activeStatus {
-    color: white; /* Белый текст */
+    color: white;
     background-color: rgba(46, 125, 50, 0.8); 
     box-shadow: 0 2px 8px rgba(0, 0, 0, 0.2);
 }
 
 .disactiveStatus {
-    color: #888; /* Тёмно-серый текст для неактивного статуса */
-    background-color: rgba(189, 189, 189, 0.8); /* Полупрозрачный серый фон */
+    color: #888;
+    background-color: rgba(189, 189, 189, 0.8);
     box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
+}
+
+
+/* Стили дашборда */
+
+.card.dashboard {
+    grid-template-columns: 1fr 5fr 3fr;
+    row-gap: 10px;
+    padding: 20px 30px 10px 30px;
+}
+
+.dashboard .icon {
+    padding-right: 40px;
+    grid-column: 1;
+    grid-row: 1 / 3;
+}
+
+.dashboard .titleSub {
+    font-size: 2rem;
+    grid-column: 2;
+    grid-row: 1;
+    align-self: normal;
+}
+
+.dashboard .category {
+    grid-column: 2;
+    grid-row: 2;
+}
+
+.dashboard .pay {
+    grid-column: 3;
+    grid-row: 1 / 3;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 8px;
+}
+
+.dashboard .buttonsBlock {
+    grid-column: 3;
+    grid-row: 3;
+    display: flex;
+    gap: 20px;
+}
+
+
+/* Стили страницы подписок */
+
+.card.subscriptions {
+    grid-template-columns: min-content 1fr;
+    padding: 20px 20px 5px;
+    row-gap: 10px;
+}
+
+.longCard {
+    grid-column: span 2;
+}
+
+.subscriptions .icon {
+    padding-right: 15px;
+}
+
+.subscriptions .titleSub {
+    font-size: 1.7rem;
+    grid-column: 2 / -1;
+    grid-row: 1;
+    align-self: end;
+}
+
+.subscriptions .category {
+    grid-column: 1 / -1;
+    grid-row: 3;
+}
+
+.subscriptions .pay {
+    grid-column: 1 / -1;
+    grid-row: 2;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    justify-content: space-between;
+}
+.subscriptions .date {
+    color: #5552e8;
+    text-align: end;
+}
+
+.subscriptions .statusSubscription {
+    grid-column: span 2;
+    grid-row: 4;
+}
+
+.subscriptions .buttonsBlock {
+    display: none;
 }
