--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -1,9 +1,12 @@
 .footer {
+    position: absolute;
     display: flex;
     justify-content: center;
     text-align: center;
     font-family: "Inter", sans-serif;
     color: #a99ec5;
+    bottom: 0;
+    width: 100%;
 }
 
 .content {
