--- a/src/components/ui/Dropdown/Dropdown.module.css
+++ b/src/components/ui/Dropdown/Dropdown.module.css
@@ -1,16 +1,15 @@
 .dropdownBlock {
   position: relative;
-  font-size: 1.3rem;
+  font-size: 1.2rem;
 }
 
 .inputDropdown {
   display: flex;
   align-items: center;
-  width: 250px;
   border: #5552e8 solid 2px;
   border-radius: 8px;
   padding: 3px 10px;
-  gap: 10px;
+  /* gap: 10px; */
   transition: border 0.2s ease;
   margin-bottom: 50px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
@@ -22,7 +21,7 @@
   height: 100%;
   width: 100%;
   outline: none;
-  font-size: 1.3rem;
+  font-size: 1.2rem;
   font-family: "Jura", sans-serif;
   font-weight: 600;
   color: #615a74;
