--- a/src/index.css
+++ b/src/index.css
@@ -25,8 +25,11 @@ body {
 }
 
 .container {
+  position: relative;
   max-width: 1200px;
   margin: 0 auto;
+  min-height: 100vh;
+  padding-bottom: 115px;
 }
 
 /* .jura-<uniquifier> { 
