Change style cards of subscriptions on dark background

--- a/src/components/Feedback/Feedback.module.css
+++ b/src/components/Feedback/Feedback.module.css
@@ -14,7 +14,7 @@
   font-size: 1.2rem;
   text-transform: uppercase;
   font-family: "Montserrat", sans-serif;
-  color: #5552e8;
+  color: #3c3cf0;
 }
 
 .textBlock {
