--- a/src/components/ui/Diagramm/Diagramm.module.css
+++ b/src/components/ui/Diagramm/Diagramm.module.css
@@ -1,6 +1,6 @@
 .tooltip {
     color: #f2f2f9;
-    background-color: #696985cc; 
+    background-color: rgba(105, 105, 133, 0.8); 
     padding: 5px;
     border-radius: 8px; 
 }
