--- a/src/components/ui/Loading.module.css
+++ b/src/components/ui/Loading.module.css
@@ -1,7 +1,7 @@
 .loading {
   font-family: "Montserrat", sans-serif;
   font-weight: 600;
-  color: #615a74;
+  color: #2c2c3e;
   width: 1200px;
   margin: 100px 0;
   height: 90vh;
