--- a/src/components/LendingFooter/LendingFooter.module.css
+++ b/src/components/LendingFooter/LendingFooter.module.css
@@ -3,7 +3,7 @@
     justify-content: center;
     text-align: center;
     font-family: "Inter", sans-serif;
-    color: #a99ec5;
+    color: #afafb1;
 }
 
 .content {
@@ -11,7 +11,7 @@
     align-items: flex-end;
     width: 100%;
     padding: 50px 0;
-    border-top: 1px solid rgb(85, 82, 232);
+    border-top: 1px solid #3c3cf0;
     justify-content: space-between;
 
 }
