--- a/src/pages/Dashboard/Dashboard.module.css
+++ b/src/pages/Dashboard/Dashboard.module.css
@@ -2,7 +2,7 @@
     display: flex;
     flex-direction: column;
     font-family: "Montserrat", sans-serif;
-    color: #615a74;
+    color: #2c2c3e;
 }
 
 .dashboardPage h1 {
@@ -41,14 +41,14 @@
 .mainData {
     font-family: "Montserrat", sans-serif;
     font-size: 3rem;
-    color: #ff3d85;
+    color: #ff3366;
     font-weight: 700;
 }
 
 .marker {
     font-style: normal;
     font-weight: 700;
-    color: #5552e8;
+    color: #3c3cf0;
 }
 
 .subscriptionsBlock {
@@ -60,7 +60,7 @@
 
 .subscriptionsBlock h2 {
     text-transform: uppercase;
-    color: #5552e8;
+    color: #3c3cf0;
     font-size: 2rem;
     font-weight: 600;
     margin-bottom: 30px;
@@ -84,7 +84,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    background-color: #f3f3f8;
+    background-color: #f3f3f5;
     border-radius: 12px;
     box-shadow:  0 4px 6px rgba(0, 0, 0, 0.05), 0 8px 24px rgba(0, 0, 0, 0.08);
     height: 100%;
