--- a/src/components/Feedback/Feedback.module.css
+++ b/src/components/Feedback/Feedback.module.css
@@ -1,39 +1,40 @@
 .singleFeedback {
   display: flex;
   flex-direction: column;
-  width: calc(100% / 3 - 20px);
-  background-color: #f8f8f8;
-  padding: 20px;
+  width: calc(100% / 3 - 24px);
+  background-color: #fff;
+  padding: 24px;
   border-radius: 20px;
   font-family: "Inter", sans-serif;
-  font-weight: 300;
-  box-shadow:  0 4px 12px rgba(0, 0, 0, 0.06), 0 2px 4px rgba(0, 0, 0, 0.03);
+  font-weight: 400;
+  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.04)
 }
 
 .userNameFeed {
-  font-size: 1.2rem;
-  text-transform: uppercase;
+  font-size: 1rem;
+  font-weight: 600;
   font-family: "Montserrat", sans-serif;
-  color: #3c3cf0;
 }
 
 .textBlock {
-  margin: 10px 0; 
+  margin: 12px 0; 
+  color: #2c2c3e;
 }
 
 .ratingBlock {
   display: flex;
   justify-content: space-between;
   margin-top: auto;
+  align-items: end;
 }
 
 .rating {
   display: flex;
   gap: 5px;
+  font-size: 1.7rem;
 }
 
 .publicDate {
-  font-family: "Inter", sans-serif;
-  font-size: 0.8rem;
-  color: #a99ec5;
+  font-size: 0.875rem;
+  color: #6c6f81;
 }
