--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -1,12 +1,20 @@
-.footer {
+.footerContainer {
     position: absolute;
+    background-color: #ffffff;
+    /* height: 70px; */
+    width: 100%;
+    border-top: 1px solid #e0e3ee;
+    color: #6c6f81;
+    font-size: 0.75rem;
+    bottom: 0;
+}
+
+.footer {
+    max-width: 1200px;
+    margin: 0 auto;
     display: flex;
     justify-content: center;
     text-align: center;
-    font-family: "Inter", sans-serif;
-    color: #d1d1d3;
-    bottom: 0;
-    width: 100%;
 }
 
 .content {
@@ -14,34 +22,51 @@
     align-items: center;
     width: 100%;
     padding: 20px 0;
-    border-top: 1px solid #3c3cf0;
     justify-content: space-between;
-
 }
 
 .socials {
     display: flex;
+    align-items: center;
     gap: 20px;
+    font-size: 35px;
+    margin: auto 0;
+}
+.socials a {
+    color: #4f46e5;
+    line-height: 0;
+}
+.socials a:hover {
+    color: #6366f1;
+}
+.socials a:active {
+    transform: scale(0.92);
 }
 
 .links {
     display: grid;
-    grid-template-columns: 2fr 1fr;
+    grid-template-columns: 1fr 1fr 1fr;
     justify-items: left;
     column-gap: 40px;
+    font-size: 14px;
 }
 
 .link {
-    color: #2c2c3e;
+    color: #6c6f81;
     font-family: "Manrope", sans-serif;
     transition: all 0.2s ease;
     margin-bottom: 2px;
+    font-weight: 500;
+    transition: color 0.3s ease;
+}
+.link:last-child {
+    grid-column: 2 / 4;
 }
 .link:hover {
     text-decoration: none;
-    transform: translateY(1px);
-    color: #3c3cf0;
+    color: #4f46e5;
 }
 .link:active {
-     color:  #ff3d85;
+    color: #1e1e2f;
+    font-weight: 600;
 }
