--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -1,26 +1,39 @@
+.headerContainer {
+    background-color: #ffffff;
+    height: 70px;
+    width: 100%;
+    box-shadow: 0 2px 6px rgba(0, 0, 0, 0.04);
+}
+.headerContainer a {
+    line-height: 0;
+}
+
 .header {
-    margin-top: 30px;
+    margin: 0 auto;
+    max-width: 1200px;
+    height: 100%;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding-bottom: 20px;
-    border-bottom: 2px solid #3c3cf0;
     font-family: "Montserrat", sans-serif;
-    color: #2c2c3e;
+    color: #1e1e2f;
+}
+.header h2 {
+    font-size: 1.1rem;
+    margin: 0;
+    font-weight: 500;
 }
 
 .nav {
     display: flex;
     gap: 10px;
-    font-size: 1.3rem;
     font-optical-sizing: auto;
     font-weight: 500;
     font-style: normal;
 }
 
 .name {
-    color: #3c3cf0;
-    text-transform: uppercase;
+    color: #4f46e5;
 }
 
 .icon {
@@ -29,80 +42,76 @@
     align-items: center;
     gap: 5px;
     padding: 10px;
-    color: #2c2c3e;
+    color: #6c6f81;
     border-radius: 8px;
-    transition: all 0.2s ease;
+    transition: all 0.1s ease;
     overflow: hidden;
 }
 .icon p {
-    font-size: 0.7rem;
+    margin-top: 5px;
+    font-size: 0.75rem;
 }
 .icon:hover {
-    color: #3c3cf0;
-    transform: translateY(-1px);
+    color: #4f46e5;
     text-decoration: none;
 }
 .icon:active {
-    outline: 2px #ff3366 solid;
-    outline-offset: 2px;
+    color: #1e1e2f;
+    transform: scale(0.97);
 }
 
 .icon .settings {
-    width: 25px;
-    height: 25px;
+    width: 24px;
+    height: 24px;
     background-image: url('@/assets/icons/menu/settings.svg');
-    background-size: auto 25px;
+    background-size: auto 24px;
     background-repeat: no-repeat;
-    transition: all 0.2s ease;
 }
 .icon:hover .settings {
     background-image: url('@/assets/icons/menu/settings_1.svg');
 }
-
-.icon .login {
-    width: 29px;
-    height: 25px;
-    background-image: url('@/assets/icons/menu/login.svg');
-    background-size: auto 25px;
-    background-repeat: no-repeat;
-    transition: all 0.2s ease;
-}
-.icon:hover .login {
-    background-image: url('@/assets/icons/menu/login_1.svg');
+.icon:active .settings {
+    background-image: url('@/assets/icons/menu/settings_2.svg');
 }
 
 .icon .analitics {
-    width: 30px;
-    height: 25px;
+    width: 29px;
+    height: 24px;
     background-image: url('@/assets/icons/menu/analitics.svg');
-    background-size: auto 25px;
+    background-size: auto 24px;
     background-repeat: no-repeat;
-    transition: all 0.2s ease;
 }
 .icon:hover .analitics {
     background-image: url('@/assets/icons/menu/analitics_1.svg');
 }
+.icon:active .analitics {
+    background-image: url('@/assets/icons/menu/analitics_2.svg');
+}
 
 .icon .subscriptions {
-    width: 20px;
-    height: 25px;
+    width: 19px;
+    height: 24px;
     background-image: url('@/assets/icons/menu/subscription.svg');
-    background-size: auto 25px;
+    background-size: auto 24px;
     background-repeat: no-repeat;
-    transition: all 0.2s ease;
 }
 .icon:hover .subscriptions {
     background-image: url('@/assets/icons/menu/subscription_1.svg');
 }
+.icon:active .subscriptions {
+    background-image: url('@/assets/icons/menu/subscription_2.svg');
+}
 
 .icon .dashboard {
-    width: 33px;
+    width: 32px;
     height: 25px;
     background-image: url('@/assets/icons/menu/dashboard.svg');
-    background-size: auto 25px;
+    background-size: auto 24px;
     background-repeat: no-repeat;
-    transition: all 0.2s ease;
 }
 .icon:hover .dashboard {
     background-image: url('@/assets/icons/menu/dashboard_1.svg');
+}
+.icon:active .dashboard {
+    background-image: url('@/assets/icons/menu/dashboard_2.svg');
 }
