--- a/src/index.css
+++ b/src/index.css
@@ -8,6 +8,7 @@
 
 a {
   text-decoration: none;
+  /* line-height: 0.6em; */
 }
 
 li {
@@ -21,15 +22,17 @@ li {
 }
 
 body {
-  background-color: #f5f5f7;
+  background-color: #f8f9fc;
 }
 
 .container {
   position: relative;
-  max-width: 1200px;
+  width: 100%;
   margin: 0 auto;
   min-height: 100vh;
-  padding-bottom: 115px;
+  /* display: flex;
+  flex-direction: column;
+  align-items: center; */
 }
 
 /* .jura-<uniquifier> { 
