--- a/src/pages/Landing/Landing.module.css
+++ b/src/pages/Landing/Landing.module.css
@@ -1,8 +1,10 @@
 .landingPage {
+    max-width: 1200px;
+    margin: 0 auto;
     display: flex;
     flex-direction: column;
     font-family: "Montserrat", sans-serif;
-    color: #2c2c3e;
+    color: #1e1e2f;
 }
 
 .mainBlock {
@@ -11,72 +13,74 @@
     margin: 0 auto;
     align-items: center;
     max-width: 1200px;
-    padding: 150px;
-    background: radial-gradient(ellipse closest-side, #e9e9e9 40%, #f5f5f7);
+    padding: 100px;
 }
 
 .mainHeader {
-    font-size: 3.5rem;
+    font-size: 2.8rem;
+    font-weight: 700;
     text-transform: uppercase;
-    color: #3c3cf0;
     text-align: center;
 }
 
 .slogan {
-    font-family: "Jura", sans-serif;
-    margin-top: 50px;
-    font-weight: 700;
-    font-size: 1.7rem;
+    font-size: 1.2rem;
     text-align: center;
-    margin-bottom: 70px;
+    font-weight: 500;
+    color: #6c6f81;
+    margin-bottom: 32px;
     display: flex;
     flex-direction: column;
     align-items: center;
+    max-width: 600px;
 }
 .separator {
     margin: 20px;
-    border: #3c3cf0 solid 1px;
+    border: #3c3cf0  solid 2px;
     width: 200px;
 }
 
 .privillege {
     display: flex;
     justify-content: space-between;
-    margin-bottom: 150px;
-
 }
 
 .singlePrivillege {
+    font-size: 1rem;
+    font-weight: 500;
+    background-color: #fff;
+    border-radius: 12px;
+    padding: 24px;
     display: flex;
     flex-direction: column;
-    width: calc(100% / 3 - 50px);
-    background-color: #e5e5f1;
-    padding: 40px;
-    border-radius: 20px;
-    box-shadow:  0 4px 6px rgba(0, 0, 0, 0.05), 0 8px 24px rgba(0, 0, 0, 0.08);
+    width: calc(100% / 3 - 24px);
+    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.04)
 }
 
 .singlePrivillege span {
-    margin-top: 30px;
-    padding-bottom: 30px;
+    padding-bottom: 12px;
     text-align: center;
     font-size: 1.4rem;
     font-family: "Inter", sans-serif;
-    border-bottom: #3c3cf0 solid 3px;
+    border-bottom: #3c3cf0 solid 2px;
 }
 
 .example {
-    margin: 0 auto;
+    margin: 80px auto;
+    box-shadow: 0 20px 40px rgba(0, 0, 0, 0.06);
+    border-radius: 16px;
 }
 
 .feedbackBlock {
-    margin: 150px auto;
+    margin: 0 auto 100px;
 }
 
 .feedbackBlock h4 {
     text-align: center;
-    margin-bottom: 50px;    
+    margin-bottom: 20px;
     font-size: 2rem;
+    font-weight: 700;
+    color: #6c6f81 ;
 }
 
 .feedback {
