--- a/src/components/CardSubscription/CardSubscription.module.css
+++ b/src/components/CardSubscription/CardSubscription.module.css
@@ -65,14 +65,6 @@
     font-size: 12px;
 }
 
-/* .statusIndicator {
-    width: 12px;
-    height: 12px;
-    border-radius: 50%;
-    margin-right: 8px;
-    display: inline-block;
-} */
-
 .statusSubscription {
     font-size: 12px;
     font-weight: 500;
@@ -140,9 +132,6 @@
     gap: 8px;
     margin-bottom: 10px;
 }
-/* .dashboard .amount {
-    font-size: 1.3rem;
-} */
 
 .dashboard .buttonsBlock {
     justify-self: center;
@@ -168,7 +157,7 @@
 
 .card.subscriptions {
     grid-template-columns: min-content 1fr 1fr;
-    padding: 5px 16px 20px 20px;
+    padding: 5px 16px 5px 20px;
 }
 
 .longCard {
@@ -205,9 +194,10 @@
     grid-column: 1 / -1;
     grid-row: 4;
     display: flex;
-    flex-direction: column;
-    gap: 10px;
+    align-items: center;
     justify-content: space-between;
+    gap: 10px;
+    margin-top: 10px;
 }
 .subscriptions .date {
     text-align: end;
@@ -220,5 +210,9 @@
 }
 
 .subscriptions .buttonsBlock {
-    display: none;
+    margin-top: 10px;
+    grid-column: 1 / -1;
+    justify-content: end;
+    display: flex;
+    gap: 10px;
 }
