--- a/src/pages/Analitics/Analitics.module.css
+++ b/src/pages/Analitics/Analitics.module.css
@@ -2,7 +2,21 @@
     display: flex;
     flex-direction: column;
     font-family: "Montserrat", sans-serif;
-    color: #615a74;
+    color: #1e1e2f;
     width: 1200px;
-    padding-bottom: 115px;
+    margin: 0 auto;
+    padding: 60px 0 130px;
+}
+
+.headerBlock {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 40px;
+}
+
+.headerBlock h1 {
+    margin: 0;
+    font-size: 1.8rem;
+    font-weight: 600;
 }
