--- a/src/components/ui/Dropdown/Dropdown.module.css
+++ b/src/components/ui/Dropdown/Dropdown.module.css
@@ -1,4 +1,5 @@
 .dropdownBlock {
+  width: inherit;
   position: relative;
   font-size: 1rem;
   color: #1e1e2f;
@@ -27,11 +28,6 @@
   color: #1e1e2f;
   transition: all 0.3s ease;
 }
-
-/* .inputDropdown:focus-within {
-  border: #ff3d85 solid 2px;
-  box-shadow: 0 4px 8px #ff3d854d;
-} */
 
 .dropdownList {
   max-height: 0;
