--- a/src/pages/Analitics/Analitics.module.css
+++ b/src/pages/Analitics/Analitics.module.css
@@ -3,9 +3,9 @@
     flex-direction: column;
     font-family: "Montserrat", sans-serif;
     color: #1e1e2f;
-    width: 1200px;
+    max-width: 1200px;
     margin: 0 auto;
-    padding: 60px 0 130px;
+    padding: 40px 0 110px;
 }
 
 .headerBlock {
@@ -19,4 +19,85 @@
     margin: 0;
     font-size: 1.8rem;
     font-weight: 600;
+}
+
+.filtersBlock {
+    max-width: 400px;
+    display: grid;
+    grid-template-columns: 3fr 2fr;
+    gap: 12px;
+}
+
+.expensesBlock {
+    display: flex;
+    justify-content: space-between;
+    gap: 24px;
+    margin-bottom: 2rem;
+}
+
+.expenses {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: calc(100% / 3 - 16px);
+    background-color: #ffffff;
+    padding: 24px 20px;
+    border-radius: 12px;
+    box-shadow: 0 4px 12px rgba(0,0,0,0.06);
+    border: 1px solid #e5e7eb;
+}
+.expenses:hover {
+    background-color: #f9fafb;
+}
+
+.expenses h3 {
+    font-size: 0.9rem;
+    color: #6c6f81;
+    font-weight: 400;
+    text-align: center;
+}
+.expenses h3 span {
+    display: block;
+    padding-top: 8px;
+    font-size: 1.8rem;
+    color: #4f46e5;
+    font-weight: 600;
+}
+
+.graphsBlock {
+    display: grid;
+    grid-template-columns: 2fr 1fr;
+    gap: 40px;
+    margin: 2rem 0;
+}
+
+.graphsBlock h2 {
+    font-size: 1.3rem;
+    font-weight: 600;
+    margin-bottom: 24px;
+    margin-top: 0;
+}
+.timeGraph {
+    height: 400px;
+}
+
+.graph {
+    background-color: #fff;
+    height: 100%;
+    border-radius: 12px;
+    border: 1px solid #e2e8f0;
+    box-shadow: 0 4px 12px rgba(0,0,0,0.06);
+}
+
+.diagramm {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-color: #ffffff;
+    border-radius: 12px;
+    box-shadow:  0 4px 12px rgba(0,0,0,0.06);
+    height: 100%;
+    border: 1px solid #e5e7eb;
+    padding: 20px;
 }
