--- a/src/pages/Subscriptions/Subscriptions.module.css
+++ b/src/pages/Subscriptions/Subscriptions.module.css
@@ -5,7 +5,7 @@
     color: #1e1e2f;
     width: 1200px;
     margin: 0 auto;
-    padding: 60px 0 130px;
+    padding: 40px 0 110px;
 }
 
 .headerBlock {
@@ -25,7 +25,7 @@
     display: flex;
     gap: 16px;
     justify-content: space-between;
-    margin-bottom: 40px;
+    margin-bottom: 2rem;
 }
 
 .itemBlock h6 {
@@ -71,6 +71,14 @@
     border-color: #9ca3af;
 }
 
+.sortFilter {
+    width: 270px;
+}
+
+.categoryFilter {
+    width: 170px;
+}
+
 .searchFilter {
     width: 270px;
 }
@@ -94,5 +102,5 @@
 .cardsBlock {
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(360px, 1fr));
-    gap: 30px;
+    gap: 24px;
 }
