--- a/src/pages/Analitics/Analitics.module.css
+++ b/src/pages/Analitics/Analitics.module.css
@@ -69,10 +69,12 @@
     display: grid;
     grid-template-columns: 2fr 1fr;
     gap: 40px;
-    margin: 2rem 0;
+    height: 450px;
+    /* margin: 2rem 0; */
 }
 
-.graphsBlock h2 {
+.graphsBlock h2,
+.cardsBlock h2 {
     font-size: 1.3rem;
     font-weight: 600;
     margin-bottom: 24px;
@@ -101,3 +103,75 @@
     border: 1px solid #e5e7eb;
     padding: 20px;
 }
+
+.cardsBlock {
+    display: flex;
+    flex-direction: column;
+    gap: 16px;
+    margin: 2rem 0 0;
+}
+
+.cardsBlock h2 {
+    margin-bottom: 0.5rem;
+}
+
+.recommendations {
+    display: flex;
+    flex-direction: column;
+    gap: 16px;
+    background-color: #fff;
+    box-shadow: 0 4px 12px rgba(0,0,0,0.06);
+    border: 1px solid #e5e7eb;
+    border-radius: 12px;
+    padding: 20px;
+    gap: 12px;
+}
+
+.recommendate {
+    display: grid;
+    grid-template-columns: max-content 1fr;
+}
+
+.recommendate:not(:last-child) {
+    border-bottom: 1px solid #e5e7eb;
+    padding-bottom: 12px;
+}
+
+.recommHead {
+    grid-column: 2 / 3;
+    font-weight: 600;
+    font-size: 1rem;
+}
+
+.messageRecomm {
+    grid-column: 2 / 3;
+    font-size: 0.9rem;
+    color: #6c6f81;
+    line-height: 1.4;
+}
+.messageRecomm:hover {
+    color: #4338ca;
+}
+
+.flag {
+    grid-column: 1;
+    grid-row: 1 / 3;
+    width: 15px;
+    height: 15px;
+    margin-right: 10px;
+    border-radius: 5px;
+}
+
+.warning {
+    background-color: #d5d906;
+}
+.info {
+    background-color: #4f46e5;
+}
+.grow {
+    background-color: #059669;
+}
+.slump {
+    background-color: #960505;
+}
+
