--- a/src/components/ui/ButtonElement/ButtonElement.module.css
+++ b/src/components/ui/ButtonElement/ButtonElement.module.css
@@ -31,7 +31,9 @@
     background-color: #312e81;
 }
 
-.addButton {
+.addButton,
+.delButton,
+.exitButton {
     padding: 14px 24px;
     border-radius: 8px;
     font-weight: 600;
@@ -99,6 +101,24 @@
     box-shadow: none;
 }
 
+.delButton {
+    background-color: #ef4444;
+    box-shadow: 0 0 0 2px rgba(243, 94, 94, 0.2);
+}
+.delButton:hover {
+    background-color: #b91c1c;
+}
+
+.exitButton {
+    background-color: transparent;
+    border: 1px solid #6c6f81;
+    color: #6c6f81;
+    box-shadow: 0 4px 12px rgba(173, 173, 173, 0.3);
+}
+.exitButton:hover {
+    background-color: rgba(108, 111, 129, 0.1);
+    box-shadow: 0 2px 6px rgba(173, 173, 173, 0.3);
+}
 
 /*Не активная кнопка - цвет:
 Цвет фона: #e0e0e0 (светлый серый).
