--- a/src/components/ModalContent/ModalContent.module.css
+++ b/src/components/ModalContent/ModalContent.module.css
@@ -64,19 +64,23 @@
     margin-top: 12px;
 }
 
-.formBlock label {
+.formBlock label,
+.formBlock h6 {
     display: flex;
     flex-direction: column;
     grid-column: 1;
     font-size: 1rem;
     width: 100%;
+    font-weight: 400;
+}
+.formBlock h6 {
+    margin-bottom: 8px;
 }
 
 .formBlock input {
     border: none;
     background-color: transparent;
     outline: none;
-    font-size: 0.9rem;
     font-family: "Montserrat", sans-serif;
     font-weight: 600;
     color: #1e1e2f;
@@ -88,6 +92,9 @@
     box-shadow: 0 1px 2px rgba(0, 0, 0, 0.04);
     transition: border-color 0.2s ease, box-shadow 0.2s ease;
     margin-top: 8px;
+}
+.dateLabel input {
+    padding: 7px 12px;
 }
 .formBlock input:focus {
     border: #6366f1 solid 1px;
@@ -103,4 +110,19 @@
 
 .formBlock .buttonsBlock {
     align-self: center;
+}
+
+.dropdownLabel input {
+    border: none;
+    margin: 0;
+    padding: 0;
+    background-color: transparent;
+    height: 100%;
+    width: 100%;
+    outline: none;
+}
+.dropdownLabel input:focus {
+    border: none;
+    outline: none;
+    box-shadow: none;
 }
